<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/exo_extrabold"
        android:text="@string/register"
        android:textColor="@color/dYellow"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/fName"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_bg"
        android:gravity="center"
        android:hint="@string/fName"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="124dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/lName"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_bg"
        android:gravity="center"
        android:hint="@string/lName"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/age"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_bg"
        android:gravity="center"
        android:hint="@string/age"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_bg"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_bg"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_bg"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="MissingConstraints,TextFields" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/exo_extrabold"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:gravity="center"
        android:text="@string/lRedirect"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>